individual section layouts done, need to fix spacing in between sections

--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,34 @@
 }
 
  .img-responsive {
- 	max-width: 300px;
+ 	max-width: 200px;
 	margin-top: 2rem;
 	margin-left: 1rem;
     border-radius: 25px;
     border: 2px solid #fff;
  }
  
+
+@media (max-width: 1300px) {
+	.img-responsive {
+ 	max-width: 200px;
+
+ }
+}
+
+@media (max-width: 1000px) {
+	.img-responsive {
+ 	max-width: 160px;
+
+ }
+}
+
+@media (max-width: 767px) {
+	.img-responsive {
+ 	max-width: 300px;
+
+ }
+}
 
 #portfolio .portfolio-item {
     right: 0;
@@ -107,7 +128,14 @@ hr.star-light {
 	background-color: #5b6e02;
 	color: #e4e6e5;
 	//padding-top: 50px;
-	//padding-bottom: 50px;
+	padding-bottom: 80px;
+
+
+}
+
+h1, .h1 {
+  font-size: 38px;
+  padding-bottom: 0px;
 }
 
 hr.star-light:after {
@@ -198,7 +226,7 @@ body {
 .navbar .nav a {
 	color: #5f5f5f;
 	font-family: "Titillium Web", sans-serif;
-	font-weight: 600;
+	font-weight: 900;
 	transition: all .5 linear;
 }
 
@@ -209,12 +237,13 @@ body {
 
 .navbar-responsive-collapse {
 	margin: 0 auto;
-	width: 80%;
+	margin-top: 6px;
+	width: 100%;
 }
 
 .nav li {
 	text-align: center;
-	white-space: nowrap;
+	//white-space: nowrap;
 }
 
 .nav > li > a:hover,
@@ -223,11 +252,8 @@ body {
 	outline: none;
 }
 
-.navbar-brand {
-	padding: 8px;
-}
 
-.active-menu {
+/*.active-menu {
 	background-color: #4e4e4e;
 	content: '.';
 	display: block;
@@ -238,12 +264,12 @@ body {
 	transition: all .5 linear;
 	width: 1%;
 	z-index: 9;
-}
+}*/
 
-.inv .active-menu {
+/*.inv .active-menu {
 	background-color: #e4e6e5;
 }
-
+*/
 .special-active-menu {
 	z-index: 10;
 }
@@ -274,6 +300,9 @@ body {
 		min-height: 6em;
 	}
 }
+
+
+
 
 @media (max-width: 767px) {
 	
@@ -365,20 +394,6 @@ body {
 	text-shadow: 0px 2px 3px #555;
 }
 
-
-/*
-@media (max-width: 991px) {
-	#slide-1 {
-		background-position: -70% 0, 170% 0;
-	}
-}
-
-@media (max-width: 767px) {
-	#slide-1 {
-		background-image: none;
-	}
-}
-*/
 	#home-row-1,
 	#home-row-2 {
 		padding-top: 25px;
@@ -401,17 +416,17 @@ body {
 		padding-top: 30px;
 	}
 	
-	#home-row-2 .col-12 .home-hover {
+	/*#home-row-2 .col-12 .home-hover {
 		height: 166px;
 		overflow: hidden;
 		padding-top: 26px;
 		transition: all ease-in .5s;
-	}
+	}*/
 	
-	#home-row-2 .col-12 .home-hover:hover {
+	/*#home-row-2 .col-12 .home-hover:hover {
 		height: 166px;
 		padding-top: 0;
-	}
+	}*/
 
 @media (max-width: 767px) {
 	#home-row-1,
@@ -580,12 +595,23 @@ body {
 	color: #e4e6e5;
 	padding-top: 90px;
 }
+a:hover{
+    text-decoration: none;
+}
+
+a{
+    text-decoration: none;
+}
 
 #slide-6 {
 	background-color: #2f2f2f;
 	color: #e4e6e5;
-	padding-bottom: 350px;
-	padding-top: 90px;
+	padding-bottom: 0px;
+	padding-top: 45px;
+}
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
+	text-decoration: none;
 }
 
 @media (max-width: 767px) {
@@ -613,7 +639,7 @@ body {
 }
 	
 	#contact-row-4 {
-		padding-top: 125px;
+		padding-top: 0px;
 	}
 	
 	#contact-row-4 .col-12 {
